--- a/tools/SifliTrace/SifliTrace.ini
+++ b/tools/SifliTrace/SifliTrace.ini
@@ -32,7 +32,7 @@ RANGE_5=0x38000
 FIND_SEL0=0
 FIND_SEL1=0
 FIND_SEL2=0
-FIND_STR0=SF_Pro_Display_Black    
+FIND_STR0=BEFOR    
 FIND_STR1=i2c2
 FIND_STR2=phonecall
 FIND_ALL=1
@@ -42,7 +42,7 @@ FIND_FOCUS=1
 NO_CASE=1
 
 [CHAN_0]
-SEL=1
+SEL=0
 TIMEMARK=1
 REFRESH=1
 COM_DES=vivo2 
